MVP complete - start of phase 14

--- a/.planning/phases/14-map-questions-to-encounters/14-03-PLAN.md
+++ b/.planning/phases/14-map-questions-to-encounters/14-03-PLAN.md
@@ -17,6 +17,7 @@ must_haves:
     - "Questions are grouped by Broad_Category + Sub_Topic into topic pools"
     - "Quiz_GetTopicPool(category, topic) returns pool with question pointers and count"
     - "Quiz_GetMapConfig(mapId) returns topic pool references for the map"
+    - "Quiz_GetGymConfig(gymId) returns mastery pool references for gym battles"
     - "Topic pools are const ROM data (no dynamic allocation)"
   artifacts:
     - path: "pokefirered/include/quiz/topic_pools.h"
@@ -147,6 +148,15 @@ def generate_topic_pools_header(topic_groups: dict, out_dir: Path):
         '    u8 topicCount;',
         '};',
         '',
+        '// Gym config struct',
+        'struct QuizGymConfig',
+        '{',
+        '    u8 gymId;',
+        '    u16 mapId;',
+        '    const struct QuizTopicPool * const *masteryPools;',
+        '    u8 poolCount;',
+        '};',
+        '',
         '// Topic pool declarations',
     ]
     
@@ -159,6 +169,7 @@ def generate_topic_pools_header(topic_groups: dict, out_dir: Path):
         '// Lookup functions',
         'const struct QuizTopicPool *Quiz_GetTopicPool(const char *category, const char *topic);',
         'const struct QuizMapConfig *Quiz_GetMapConfig(u16 mapId);',
+        'const struct QuizGymConfig *Quiz_GetGymConfig(u8 gymId);',
         '',
         '#endif // GUARD_TOPIC_POOLS_H',
         ''
@@ -249,6 +260,58 @@ def generate_topic_pools_source(questions: dict, topic_groups: dict, topic_confi
             safe_map = map_name.replace('MAP_', '')
             lines.append(f'    case {map_name}:')
             lines.append(f'        return &sMapConfig_{safe_map};')
+        
+        lines.extend([
+            '    default:',
+            '        return NULL;',
+            '    }',
+            '}',
+            ''
+        ])
+    
+    # Generate gym configs from gyms_by_map
+    if 'gyms_by_map' in topic_config:
+        lines.append('// Gym mastery pool configurations')
+        
+        for gym_map, gym_data in topic_config['gyms_by_map'].items():
+            gym_id = gym_data['gym']
+            mastery_pool = gym_data.get('mastery_pool', [])
+            safe_gym = f"GYM_{gym_id}"
+            
+            if mastery_pool:
+                # Pool pointer array
+                lines.append(f'static const struct QuizTopicPool * const sGymPools_{safe_gym}[] = {{')
+                for t in mastery_pool:
+                    pool_name = sanitize_topic_name(t['category'], t['topic'])
+                    lines.append(f'    &gQuizTopicPool_{pool_name},')
+                lines.append('};')
+                lines.append('')
+                
+                # Config struct
+                lines.extend([
+                    f'static const struct QuizGymConfig sGymConfig_{safe_gym} = {{',
+                    f'    .gymId = {gym_id},',
+                    f'    .mapId = {gym_map},',
+                    f'    .masteryPools = sGymPools_{safe_gym},',
+                    f'    .poolCount = {len(mastery_pool)},',
+                    '};',
+                    ''
+                ])
+        
+        # Generate gym lookup function
+        lines.extend([
+            '// Gym config lookup',
+            'const struct QuizGymConfig *Quiz_GetGymConfig(u8 gymId)',
+            '{',
+            '    switch (gymId)',
+            '    {',
+        ])
+        
+        for gym_map, gym_data in topic_config['gyms_by_map'].items():
+            gym_id = gym_data['gym']
+            safe_gym = f"GYM_{gym_id}"
+            lines.append(f'    case {gym_id}:')
+            lines.append(f'        return &sGymConfig_{safe_gym};')
         
         lines.extend([
             '    default:',
@@ -454,14 +517,17 @@ cd pokefirered && make -j4
 1. `python3 tools/quiz/build_questions.py --topics` generates topic pool files
 2. Topic pools contain questions grouped by Broad_Category + Sub_Topic
 3. Quiz_GetMapConfig(mapId) returns correct pool references for configured maps
-4. Quiz_GetRandomQuestionForMap(mapId) returns a valid question
-5. `cd pokefirered && make -j4` builds successfully
+4. Quiz_GetGymConfig(gymId) returns correct mastery pool references for gym battles
+5. Quiz_GetRandomQuestionForMap(mapId) returns a valid question
+6. `cd pokefirered && make -j4` builds successfully
 </verification>
 
 <success_criteria>
 - build_questions.py accepts --topics argument for map_topics.json
 - All unique category+topic combinations become topic pools
 - Each map in map_topics.json has a QuizMapConfig with pool references
+- Each gym in gyms_by_map has a QuizGymConfig with mastery pool references
+- Quiz_GetGymConfig(gymId) lookup is generated for gym battles (used by Plan 14-04 Task 3)
 - Topic pool data is static const (ROM, not RAM)
 - Build compiles and links without errors
 </success_criteria>
