--- a/.planning/phases/14-map-questions-to-encounters/14-04-PLAN.md
+++ b/.planning/phases/14-map-questions-to-encounters/14-04-PLAN.md
@@ -174,14 +174,15 @@ Quiz_SetMasteryMaskInSection(species, sQuizState.currentSection, newMask);
 5. For checking if species is ready for capture:
 ```c
 // Check if 5 questions mastered (capture ready)
-u8 mastered = Quiz_CountMasteredQuestionsInSection(species, sQuizState.currentSection);
+// Note: Quiz_CountMasteredQuestionsForSpecies uses current section internally
+u8 mastered = Quiz_CountMasteredQuestionsForSpecies(species);
 if (mastered >= 5)
 {
     Quiz_SetSpeciesStateInSection(species, sQuizState.currentSection, QUIZ_STATE_CAPTURE_PENDING);
 }
 ```
 
-Note: You may need to add Quiz_CountMasteredQuestionsInSection() helper or adapt existing counting logic.
+Note: Quiz_CountMasteredQuestionsForSpecies() is implemented in Task 2 below.
   </action>
   <verify>Build compiles: `cd pokefirered && make -j4 2>&1 | grep -E "error:" | head -5`</verify>
   <done>Quiz_InitWildEncounter uses topic pools for question selection, section-aware mastery tracking</done>
@@ -207,7 +208,13 @@ static u8 Quiz_CountBitsSet(u8 mask)
 }
 ```
 
-2. Update or add Quiz_CountMasteredQuestions to be section-aware:
+2. Add declaration to quiz.h:
+```c
+// In pokefirered/include/quiz/quiz.h, add:
+u8 Quiz_CountMasteredQuestionsForSpecies(u16 species);
+```
+
+3. Update or add Quiz_CountMasteredQuestions to be section-aware:
 ```c
 u8 Quiz_CountMasteredQuestionsForSpecies(u16 species)
 {
@@ -217,7 +224,7 @@ u8 Quiz_CountMasteredQuestionsForSpecies(u16 species)
 }
 ```
 
-3. Update the "all questions mastered" check in Quiz_OnMoveConfirmed:
+4. Update the "all questions mastered" check in Quiz_OnMoveConfirmed:
 
 Find the existing mastery check code and update it:
 ```c
@@ -231,7 +238,7 @@ if (masteredCount >= 5)  // 5 questions = capture ready
 }
 ```
 
-4. Update Quiz_GetProgress() and Quiz_GetMasteryProgress() for UI display:
+5. Update Quiz_GetProgress() and Quiz_GetMasteryProgress() for UI display:
 ```c
 void Quiz_GetMasteryProgress(u8 *mastered, u8 *total)
 {
@@ -240,7 +247,7 @@ void Quiz_GetMasteryProgress(u8 *mastered, u8 *total)
 }
 ```
 
-5. Update capture success to mark cleared in section:
+6. Update capture success to mark cleared in section:
 ```c
 // In capture success code path:
 Quiz_SetSpeciesClearedInSection(sQuizState.currentSpecies, 
@@ -302,13 +309,34 @@ static u8 Quiz_BuildAreaPool(void)
 }
 ```
 
-3. For gym leaders, you may want a special function to get the gym's mastery pool:
+3. For gym leaders, use Quiz_GetGymConfig to get the gym's mastery pool:
 ```c
-static u8 Quiz_BuildGymMasteryPool(u16 gymMapId)
+static u8 Quiz_BuildGymMasteryPool(u8 gymId)
 {
-    // This would use gyms_by_map configuration
-    // For now, can use the gym map's topic pools
-    return Quiz_BuildAreaPool();
+    const struct QuizGymConfig *gymConfig;
+    const struct QuizTopicPool *pool;
+    u8 count = 0;
+    u8 i, j;
+    
+    gymConfig = Quiz_GetGymConfig(gymId);
+    if (gymConfig == NULL)
+        return Quiz_BuildAreaPool();  // Fallback to map topics
+    
+    // Add questions from all mastery pools
+    for (i = 0; i < gymConfig->poolCount && count < MAX_POOL_SIZE; i++)
+    {
+        pool = gymConfig->masteryPools[i];
+        if (pool == NULL)
+            continue;
+        
+        for (j = 0; j < pool->count && count < MAX_POOL_SIZE; j++)
+        {
+            sAreaPool[count++] = pool->questions[j];
+        }
+    }
+    
+    sAreaPoolCount = count;
+    return count;
 }
 ```
 
